# tinymicro-mos6502-kansas-lava

./: .gitignore  README.md  tinymicro-mos6502-kansas-lava.cabal
lava/TinyMicro/: Board.hs  Build.hs  Machine.hs  Video.hs
lava/TinyMicro/Board/: MOS6502.hs
src/MOS6502/TinyMicro/: Board.hs  Build.hs  DCM.hs  Video.hs
src/TinyMicro/: Board.hs  Build.hs  DCM.hs  Video.hs
src/TinyMicro/Board/: MOS6502.hs
ucf/: TinyMicro6502.ucf
vhdl/: DualRAM.vhdl  TinyMicro6502.vhdl
xaw/: dcm_32_to_80.xaw
xco/: clockman.xco
