name:                tinymicro-mos6502-kansas-lava
version:             0.0.0.0
synopsis:            TinyMicro implementation in Kansas Lava, built around the MOS 6502
description:         The TinyMicro is a minimal 8-bit microcomputer "architecture" inspired by
                     the 6502 emulator site http://www.6502asm.com/. It consists of 16K RAM,
                     up to 8K ROM, a 64-by-64 pixel, 16-color framebuffer memory-mapped from $0200,
                     and a keyboard readable via $00FF.
license:             GPL-2
license-file:        LICENSE
copyright:           (C) 2014 Gergo Erdi
author:              Gergo Erdi
maintainer:          Gergo Erdi <gergo@erdi.hu>
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tinymicro-mos6502-kansas-lava
  hs-source-dirs:      lava
  main-is:             TinyMicro/Build.hs
  other-modules:
        TinyMicro.Machine
        TinyMicro.Board
        TinyMicro.Video
        TinyMicro.Board.MOS6502
        
  build-depends:
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        netlist-to-vhdl >=0.3 && <0.4,
        kansas-lava-cores >= 0.1.2 && < 0.2,
        kansas-lava-papilio >= 0.3 && < 0.4,
        kansas-lava-shake >= 0.2.0.1 && < 0.3,
        sized-types >=0.3,
        mos6502-kansas-lava == 0.0.0.0,
        bytestring,
        shake
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, FlexibleInstances, TypeFamilies, NoMonomorphismRestriction
  Ghc-Options:         -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures
                       -threaded

source-repository head
  type:     git
  location: git://github.com/gergoerdi/tinymicro-mos6502-kansas-lava
